--- a/TrashCollector/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector/TrashCollector.csproj
@@ -184,7 +184,7 @@
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\TrashPickups.cs" />
+    <Compile Include="Models\Pickups.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
