--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -189,6 +189,10 @@
     <Compile Include="Migrations\201903071438002_Customer_AddBillDetails.Designer.cs">
       <DependentUpon>201903071438002_Customer_AddBillDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903081654286_CustomerUpdate_nullableDateTimeFields.cs" />
+    <Compile Include="Migrations\201903081654286_CustomerUpdate_nullableDateTimeFields.Designer.cs">
+      <DependentUpon>201903081654286_CustomerUpdate_nullableDateTimeFields.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -283,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903071438002_Customer_AddBillDetails.resx">
       <DependentUpon>201903071438002_Customer_AddBillDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903081654286_CustomerUpdate_nullableDateTimeFields.resx">
+      <DependentUpon>201903081654286_CustomerUpdate_nullableDateTimeFields.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
